WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145055
Fix trivial typos in TextEncodingDetectorICU.cpp
https://bugs.webkit.org/show_bug.cgi?id=145055
Summary
Fix trivial typos in TextEncodingDetectorICU.cpp
Sungmann Cho
Reported
2015-05-15 08:42:17 PDT
SSIA
Attachments
Patch
(1.89 KB, patch)
2015-05-15 08:43 PDT
,
Sungmann Cho
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sungmann Cho
Comment 1
2015-05-15 08:43:42 PDT
Created
attachment 253199
[details]
Patch
WebKit Commit Bot
Comment 2
2015-05-15 11:45:42 PDT
Comment on
attachment 253199
[details]
Patch Clearing flags on attachment: 253199 Committed
r184402
: <
http://trac.webkit.org/changeset/184402
>
WebKit Commit Bot
Comment 3
2015-05-15 11:45:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug