Fix trivial typo in TextEncodingDetectorICU.cpp. https://bugs.webkit.org/show_bug.cgi?id=145055

Patch by Sungmann Cho <sungmann.cho@navercorp.com> on 2015-05-15
Reviewed by Alexey Proskuryakov.

No new tests, no behavior change..

* platform/text/TextEncodingDetectorICU.cpp:
(WebCore::detectTextEncoding):

Canonical link: https://commits.webkit.org/163091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184402 268f45cc-cd09-0410-ab3c-d52691b4dbfc